fixing scroll and overflow bug

--- a/css/common.css
+++ b/css/common.css
@@ -30,7 +30,6 @@
 html {
     width: 100%;
     height: 100%;
-    overflow-x: hidden;
 }
 
 /* General styles for body elements */
