--- a/css/home.responsive.css
+++ b/css/home.responsive.css
@@ -91,7 +91,7 @@
     }
     /* Styles of absolute cart */
     .absolute-cart {
-        width: 9%;
+        width: 45%;
         height: 60px;
         bottom: 5%;
         left: 3%;
@@ -285,7 +285,7 @@
     }
     /* Styles of absolute cart */
     .absolute-cart {
-        width: 9%;
+        width: 35%;
         height: 60px;
         bottom: 5%;
         left: 3%;
@@ -474,7 +474,7 @@
     }
     /* Styles of absolute cart */
     .absolute-cart {
-        width: 10%;
+        width: 30%;
         height: 70px;
         bottom: 5%;
         left: 3%;
@@ -594,7 +594,7 @@
     }
     /* Styles of absolute cart */
     .absolute-cart {
-        width: 14%;
+        width: 35%;
         height: 80px;
         bottom: 5%;
         left: 3%;
